fix: update newsletter link color to white for better visibility

--- a/assets/less/newsletter.less
+++ b/assets/less/newsletter.less
@@ -132,6 +132,7 @@
 
             a {
                 text-decoration: underline;
+                color: white;
             }
         }
     }
